Added HMM and RNN sliding

--- a/benchmarking.ipynb
+++ b/benchmarking.ipynb
@@ -16,7 +16,8 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.decomposition import PCA\n",
     "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
-    "from collections import Counter"
+    "from collections import Counter\n",
+    "from scipy.signal import find_peaks"
    ]
   },
   {
@@ -100,22 +101,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "def feature_engineer(mat):\n",
     "    mat = mat[:, 5:]\n",
+    "    peak_lst = [find_peaks(x)[0] for x in mat.T]\n",
     "    avg = mat.mean(axis=0).reshape(1, -1)\n",
+    "    abvms = []\n",
+    "    blms = []\n",
+    "    for i in range(mat.shape[1]):\n",
+    "        abvms.append((mat[peak_lst[i], i] >= avg[0, i]).sum()/mat.shape[0])\n",
+    "        blms.append((mat[peak_lst[i], i] < avg[0, i]).sum()/mat.shape[0])\n",
+    "    abvms = np.array(abvms).astype(np.float32).reshape(1, -1)\n",
+    "    blms = np.array(blms).astype(np.float32).reshape(1, -1)\n",
     "#     min = mat.min(axis=0).reshape(1, -1)\n",
     "    max = mat.max(axis=0).reshape(1, -1)\n",
     "    std = mat.std(axis=0).reshape(1, -1)\n",
-    "    return np.concatenate((max, avg, std), axis=1).flatten()"
+    "    return np.concatenate((max, avg, std, abvms, blms), axis=1).flatten()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,31 +142,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "cannot reshape array of size 212898 into shape (57)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-dbf0b57b9e38>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtrain_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m19\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;31m# train_features /= train_features.max(axis=0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mvalid_features\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mvalid\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'features'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreshape\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m19\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;31m# valid_features /= valid_features.max(axis=0)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 212898 into shape (57)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "train_features = np.concatenate(train['features'].values).reshape(-1, 19*3)\n",
+    "train_features = np.concatenate(train['features'].values).reshape(-1, 14*5)\n",
     "# train_features /= train_features.max(axis=0)\n",
-    "valid_features = np.concatenate(valid['features'].values).reshape(-1, 19*3)\n",
+    "valid_features = np.concatenate(valid['features'].values).reshape(-1, 14*5)\n",
     "# valid_features /= valid_features.max(axis=0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -168,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -182,10 +179,10 @@
     {
      "data": {
       "text/plain": [
-       "0.9476987447698745"
+       "0.9662655356086013"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,16 +195,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.47737355811889975"
+       "0.3882978723404255"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -228,33 +225,41 @@
      "text": [
       "                         precision    recall  f1-score   support\n",
       "\n",
-      " curve-left-spin-Lfirst       0.32      0.20      0.25        40\n",
-      " curve-left-spin-Rfirst       0.32      0.17      0.23        80\n",
-      "        curve-left-step       0.00      0.00      0.00        60\n",
-      "curve-right-spin-Lfirst       0.19      0.23      0.21        61\n",
-      "curve-right-spin-Rfirst       0.31      0.97      0.47        60\n",
-      "       curve-right-step       0.30      0.31      0.31        58\n",
-      "           jump-one-leg       0.42      0.33      0.37        40\n",
-      "           jump-two-leg       0.36      0.12      0.19        40\n",
-      "   lateral-shuffle-left       0.48      0.72      0.57        43\n",
-      "  lateral-shuffle-right       0.58      0.35      0.44        40\n",
-      "                    run       0.23      0.30      0.26        60\n",
-      "                    sit       1.00      1.00      1.00        49\n",
-      "           sit-to-stand       0.29      0.55      0.38        49\n",
-      "             stair-down       0.10      0.07      0.08        44\n",
-      "               stair-up       0.23      0.45      0.30        44\n",
-      "                  stand       0.75      1.00      0.86        49\n",
-      "           stand-to-sit       0.39      0.69      0.50        49\n",
-      "      v-cut-left-Lfirst       0.21      0.08      0.12        60\n",
-      "      v-cut-left-Rfirst       0.19      0.23      0.21        40\n",
-      "     v-cut-right-Lfirst       0.00      0.00      0.00        61\n",
-      "     v-cut-right-Rfirst       0.43      0.23      0.30        40\n",
-      "                   walk       0.00      0.00      0.00        60\n",
+      " curve-left-spin-Lfirst       1.00      0.28      0.44        60\n",
+      " curve-left-spin-Rfirst       0.00      0.00      0.00        60\n",
+      "        curve-left-step       0.03      0.03      0.03        60\n",
+      "curve-right-spin-Lfirst       0.02      0.03      0.03        60\n",
+      "curve-right-spin-Rfirst       1.00      0.02      0.03        60\n",
+      "       curve-right-step       0.35      0.25      0.29        60\n",
+      "           jump-one-leg       0.45      0.62      0.52        60\n",
+      "           jump-two-leg       0.73      0.55      0.63        60\n",
+      "   lateral-shuffle-left       0.82      0.15      0.26        59\n",
+      "  lateral-shuffle-right       0.54      0.39      0.45        57\n",
+      "                    run       0.58      0.63      0.60        60\n",
+      "                    sit       1.00      0.67      0.80        60\n",
+      "           sit-to-stand       0.93      0.47      0.62        60\n",
+      "             stair-down       1.00      0.32      0.48        60\n",
+      "               stair-up       0.36      0.45      0.40        60\n",
+      "                  stand       0.95      0.67      0.78        60\n",
+      "           stand-to-sit       0.93      0.63      0.75        60\n",
+      "      v-cut-left-Lfirst       0.14      0.95      0.25        60\n",
+      "      v-cut-left-Rfirst       1.00      0.33      0.50        60\n",
+      "     v-cut-right-Lfirst       0.26      0.52      0.35        60\n",
+      "     v-cut-right-Rfirst       0.65      0.55      0.59        60\n",
+      "                   walk       0.11      0.03      0.05        60\n",
       "\n",
-      "              micro avg       0.35      0.35      0.35      1127\n",
-      "              macro avg       0.32      0.36      0.32      1127\n",
-      "           weighted avg       0.31      0.35      0.31      1127\n",
+      "              micro avg       0.39      0.39      0.39      1316\n",
+      "              macro avg       0.58      0.39      0.40      1316\n",
+      "           weighted avg       0.58      0.39      0.40      1316\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nilavro/miniconda3/envs/analytics/lib/python3.7/site-packages/sklearn/metrics/classification.py:1143: UndefinedMetricWarning: Precision and F-score are ill-defined and being set to 0.0 in labels with no predicted samples.\n",
+      "  'precision', 'predicted', average, warn_for)\n"
      ]
     }
    ],
@@ -264,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -274,42 +279,29 @@
        "  svd_solver='auto', tol=0.0, whiten=False)"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pca = PCA()\n",
-    "pca.fit(np.concatenate((train_features, valid_features), axis=0))"
+    "pca.fit(np.concatenate((train_features, valid_features), axis=0)[:,[0, 1, 2, 4, 5, 6]])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([5.63586095e-01, 9.57954699e-02, 6.60301993e-02, 5.09248700e-02,\n",
-       "       3.31286222e-02, 2.48107127e-02, 2.38384051e-02, 2.06816033e-02,\n",
-       "       1.72674254e-02, 1.63514843e-02, 1.29753082e-02, 9.64484340e-03,\n",
-       "       8.80479794e-03, 7.58861116e-03, 6.96936242e-03, 6.52518622e-03,\n",
-       "       5.53367203e-03, 3.45051168e-03, 3.26511859e-03, 2.75804987e-03,\n",
-       "       2.34844928e-03, 2.04364491e-03, 1.74280401e-03, 1.59476801e-03,\n",
-       "       1.37449721e-03, 1.29043059e-03, 1.13402996e-03, 9.93009798e-04,\n",
-       "       9.05611288e-04, 8.03266302e-04, 7.34525549e-04, 6.61621193e-04,\n",
-       "       5.86461460e-04, 5.06359077e-04, 4.64819885e-04, 3.71268896e-04,\n",
-       "       3.48587092e-04, 3.40307035e-04, 3.08852532e-04, 2.32927830e-04,\n",
-       "       2.16877822e-04, 1.95945143e-04, 1.42934534e-04, 1.26198151e-04,\n",
-       "       1.00592318e-04, 9.61459281e-05, 8.28635236e-05, 6.86286042e-05,\n",
-       "       5.85551270e-05, 5.26812221e-05, 4.56370347e-05, 4.39279978e-05,\n",
-       "       3.31487504e-05, 1.65582161e-05, 2.25554140e-06, 4.35171329e-07,\n",
-       "       2.43326425e-08])"
+       "array([0.71943337, 0.10514937, 0.08120313, 0.04612551, 0.03506294,\n",
+       "       0.01302568])"
       ]
      },
-     "execution_count": 167,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -320,26 +312,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_features = pca.transform(train_features)[:, :11]\n",
-    "valid_features = pca.transform(valid_features)[:, :11]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.6203879802206163"
+       "array([3.85680000e+04, 5.14940000e+04, 3.92760000e+04, 3.56480000e+04,\n",
+       "       4.01880000e+04, 5.60560000e+04, 4.08000000e+04, 2.74960000e+04,\n",
+       "       4.17000000e+04, 6.45560000e+04, 6.54880000e+04, 4.50680000e+04,\n",
+       "       6.54200000e+04, 6.24320000e+04, 3.40983121e+04, 3.72103212e+04,\n",
+       "       3.23892767e+04, 3.48620514e+04, 3.30355879e+04, 3.72282084e+04,\n",
+       "       3.46655025e+04, 2.45416457e+04, 2.92156163e+04, 2.93155879e+04,\n",
+       "       2.90865415e+04, 2.96166641e+04, 3.01782827e+04, 2.93035594e+04,\n",
+       "       1.43000352e+03, 2.45572192e+03, 2.11460589e+03, 3.80426122e+02,\n",
+       "       1.44714026e+03, 1.99036629e+03, 2.15796809e+03, 2.06036646e+03,\n",
+       "       5.78610644e+03, 8.57089223e+03, 9.46019588e+03, 5.92796550e+03,\n",
+       "       1.32602008e+04, 1.00397954e+04, 7.80174369e-03, 5.50711341e-03,\n",
+       "       1.05553009e-02, 1.51445614e-02, 1.10142268e-02, 1.00963749e-02,\n",
+       "       1.00963749e-02, 1.05553009e-02, 1.00963749e-02, 9.63744801e-03,\n",
+       "       8.26067012e-03, 2.43230835e-02, 1.46856355e-02, 1.42267095e-02,\n",
+       "       4.13033506e-03, 6.88389177e-03, 6.42496580e-03, 1.42267095e-02,\n",
+       "       2.29463051e-03, 5.96603937e-03, 8.71959608e-03, 5.96603937e-03,\n",
+       "       3.21248290e-03, 5.04818745e-03, 4.58926102e-03, 6.42496580e-03,\n",
+       "       1.14731528e-02, 7.80174369e-03])"
       ]
      },
-     "execution_count": 173,
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_features[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_features = pca.transform(train_features[:,[0, 1, 2, 4, 5, 6]])[:, :3]\n",
+    "valid_features = pca.transform(valid_features[:,[0, 1, 2, 4, 5, 6]])[:, :3]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40816729137897023"
+      ]
+     },
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,16 +381,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.3052351375332742"
+       "0.23480243161094225"
       ]
      },
-     "execution_count": 174,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
