CNN model added

--- a/HMM.ipynb
+++ b/HMM.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,6 +154,7 @@
     "        label = labels[i]\n",
     "        l = lens[i]\n",
     "        acc_emg = [0, 1, 2, 3, 5, 6, 7, 9, 10, 11]\n",
+    "#         mat -= mat.mean(axis=0)\n",
     "        mat[:, acc_emg] -= mat[:, acc_emg].mean(axis=0)\n",
     "        mat[:, :4] = filter_emg(mat[:, :4])\n",
     "        extracted_steps = []\n",
@@ -261,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,36 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_data, train_labels, train_lens = get_dataset('train', 10, 5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "models = []\n",
-    "scores = []\n",
-    "for i in range(22):\n",
-    "    model = hmm.GaussianHMM(n_components=10, covariance_type='diag', n_iter=10000)\n",
-    "    label = i\n",
-    "    idx = (train_labels == label)\n",
-    "    model.fit(np.concatenate(train_data[idx], axis=0), train_lens[idx])\n",
-    "    score_list = np.array([model.score(seq) for seq in train_data[idx]])\n",
-    "    scores.append({'avg_score': score_list.mean(),\n",
-    "                   'std_score': score_list.std()\n",
-    "                  })\n",
-    "    models.append(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -325,12 +297,50 @@
     }
    ],
    "source": [
-    "valid_data, valid_labels, valid_lens = get_dataset('valid', 10, 5)"
+    "train_data, train_labels, train_lens = get_dataset('train', 80, 40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "models = []\n",
+    "scores = []\n",
+    "for i in range(22):\n",
+    "    model = hmm.GaussianHMM(n_components=8, covariance_type='diag', n_iter=10000)\n",
+    "    label = i\n",
+    "    idx = (train_labels == label)\n",
+    "    model.fit(np.concatenate(train_data[idx], axis=0), train_lens[idx])\n",
+    "    score_list = np.array([model.score(seq) for seq in train_data[idx]])\n",
+    "    scores.append({'avg_score': score_list.mean(),\n",
+    "                   'std_score': score_list.std()\n",
+    "                  })\n",
+    "    models.append(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/nilavro/miniconda3/envs/analytics/lib/python3.7/site-packages/scipy/signal/_arraytools.py:45: FutureWarning: Using a non-tuple sequence for multidimensional indexing is deprecated; use `arr[tuple(seq)]` instead of `arr[seq]`. In the future this will be interpreted as an array index, `arr[np.array(seq)]`, which will result either in an error or a different result.\n",
+      "  b = a[a_slice]\n"
+     ]
+    }
+   ],
+   "source": [
+    "valid_data, valid_labels, valid_lens = get_dataset('valid', 80, 40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -343,16 +353,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.92018779342723"
+       "0.9217527386541471"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
