--- a/HMM.ipynb
+++ b/HMM.ipynb
@@ -297,12 +297,12 @@
     }
    ],
    "source": [
-    "train_data, train_labels, train_lens = get_dataset('train', 80, 40)"
+    "train_data, train_labels, train_lens = get_dataset('train', 50, 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -335,12 +335,12 @@
     }
    ],
    "source": [
-    "valid_data, valid_labels, valid_lens = get_dataset('valid', 80, 40)"
+    "valid_data, valid_labels, valid_lens = get_dataset('valid', 50, 50)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -362,13 +362,16 @@
        "0.9217527386541471"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "accuracy_score(valid_labels, valid_preds)"
+    "accuracy_score(valid_labels, valid_preds)\n",
+    "# 80-40-8: 0.9217527386541471\n",
+    "# 50-50-8: 0.9280125195618153 *\n",
+    "# 50-50-10: 0.9217527386541471"
    ]
   },
   {
